# M2-GAmazing

./: .gitignore  .gitmodules  CMakeLists.txt  FindC3GA.cmake  LICENSE.md  README.md
doc/: Rapport.md
doxygen/: Doxyfile
src/: fractal.frag  gamazing.cpp  juliaset.cpp  mandelbrot.cpp  shader.cpp
src/shader/: displayTexture.frag  displayTexture.vert  zoom.vert
src/utils/: c3gaTools.hpp  circle.h  displayTexture.cpp  displayTexture.h  drawCircle.cpp  drawCircle.h  flower.cpp  flower.h  gl-exception.cpp  gl-exception.h  shader.cpp  shader.h  sierpinski.h  square.cpp  square.h
